# Ajedrez

./: .gitignore  CMakeLists.txt  Gestor.cpp  Gestor.hpp  LICENSE.txt  Piezas.cpp  Piezas.hpp  README.md  TODO.md  Tablero.cpp  Tablero.hpp  main.cpp  texturas.hpp
.cache/clangd/index/: Pieza.hpp.FA9BA19A473E806E.idx  Tablero.cpp.595C04ED60B8E291.idx  Tablero.hpp.7D159425FDCF566D.idx  cgltf.h.3230C979D037913F.idx  config.h.9741F7031E330677.idx  context.c.148B6342B0751B1F.idx  dr_mp3.h.6C2ED4E931AC8891.idx  dr_wav.h.72885D8FB5CBEB09.idx  egl_context.c.8256619BBB371426.idx  glad.h.CC4FF8C4D51B883E.idx  glfw3.h.75ECA726ABAD1680.idx  glfw3native.h.6E45F514FE97D763.idx  glx_context.c.2B4EE64FD2000E25.idx  init.c.BEC74B6A3F874655.idx  input.c.4C039C6AAE0AD2C3.idx  internal.h.73C240A28954AE7F.idx  jar_mod.h.331B14B044070F36.idx  jar_xm.h.5D9491946BCD28A8.idx  linux_joystick.c.CC8E692309678A51.idx  linux_joystick.h.6081148A9E37C2A2.idx  m3d.h.AC3F1376C2E7B6B8.idx  main.cpp.AB961E866EF3D758.idx  mappings.h.DA0D1889EEA7C0A6.idx  miniaudio.h.D6A20DDE2A1E6579.idx  monitor.c.6237F51A473C03CB.idx  null_init.c.095DDC7414867E52.idx  null_joystick.c.2800C36701D467B4.idx  null_joystick.h.902EE5C5512FFB5C.idx  null_monitor.c.F0EF297E8D843CF7.idx  null_platform.h.4E983F52D6CE1B6C.idx  null_window.c.5E67DCF8F18EE790.idx  osmesa_context.c.22EC1F61E6D36C96.idx  par_shapes.h.559A4EEC03627035.idx  platform.c.407303AA6FE06D1B.idx  platform.h.230ADF0CE24DDECF.idx  posix_module.c.EEAA1FE20BE4F507.idx  posix_poll.c.7F39D5224BD9DAF9.idx  posix_poll.h.33501DDA44551253.idx  (+40 more)
